[workspace]
  members = ["packages/*"]

  [workspace.package]
    version = "0.0.1"
    authors = ["Prince Muel <vansomecsam@gmail.com>"]
    edition = "2021"
    publish = false
    description = "A collection of personal helper utilities I wrote in Rust."
    repository = "https://github.com/princemuel/utility-kit"
    license = "MIT OR Apache-2.0"

  [workspace.dependencies]
