[workspace]
  resolver = "2"
  members = ["packages/*"]

  [workspace.package]
    version = "0.0.1"
    authors = ["Prince Muel <vansomecsam@gmail.com>"]
    edition = "2021"
    publish = false
    description = "A collection of personal helper utilities I wrote in Rust."
    repository = "https://github.com/princemuel/rustyutils"
    license = "MIT OR Apache-2.0"

  [workspace.dependencies]
    clap = { version = "4", features = ["derive"] }
    shellexpand = "3"
