[package]
    edition = "2024"
    name    = "synk"
    version = "0.1.0"
[[bin]]
    name = "synk"
    path = "src/main.rs"
[dependencies]
    anyhow             = { workspace = true }
    clap               = { workspace = true }
    serde              = { workspace = true }
    serde_json         = { workspace = true }
    tokio              = { workspace = true }
    tracing            = { workspace = true }
    tracing-subscriber = { workspace = true }
[lints]
    workspace = true
